fixes the navbar height on mobile

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -102,7 +102,7 @@ nav {
 }
 
 .height-fixed {
-  height: 24rem;
+  height: 16rem;
 }
 
 @media screen and (min-width: 30em)  {
